--- a/site_hw1/index.html
+++ b/site_hw1/index.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная страница</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="index.html">Главная</a>
-    <a href="catalog/catalog.html">Каталог</a>
-    <a href="">Контакты</a>
-    <h1>Главная страница</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione nesciunt quidem rem possimus velit mollitia iure suscipit, tempore voluptatibus accusamus consequatur esse incidunt omnis et totam corporis repellat iusto perferendis?</p>
-    <h2>Добро пожаловать на сайт</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, magni minus? Sunt cum quas provident perspiciatis animi sint aspernatur exercitationem voluptates recusandae, natus illum nobis officia maxime tempore! Hic, doloribus?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea culpa quasi eveniet voluptatem nisi facere odit sapiente earum dicta! Dicta nulla harum voluptatem beatae quia, asperiores aliquam. Nemo, voluptatem laborum.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugit libero ipsa modi! Porro dicta numquam, quaerat veritatis, excepturi tempore in cum temporibus, nam distinctio fugit impedit iusto saepe cumque?</p>
+    <a class="nav__link" href="index.html">Главная</a>
+    <a class="nav__link" href="catalog/catalog.html">Каталог</a>
+    <a class="nav__link" href="">Контакты</a>
+    <h1 class="title">Главная страница</h1>
+    <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione nesciunt quidem rem possimus velit mollitia iure suscipit, tempore voluptatibus accusamus consequatur esse incidunt omnis et totam corporis repellat iusto perferendis?</p>
+    <h2 class="subtitle">Добро пожаловать на сайт</h2>
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, magni minus? Sunt cum quas provident perspiciatis animi sint aspernatur exercitationem voluptates recusandae, natus illum nobis officia maxime tempore! Hic, doloribus?</p>
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea culpa quasi eveniet voluptatem nisi facere odit sapiente earum dicta! Dicta nulla harum voluptatem beatae quia, asperiores aliquam. Nemo, voluptatem laborum.</p>
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugit libero ipsa modi! Porro dicta numquam, quaerat veritatis, excepturi tempore in cum temporibus, nam distinctio fugit impedit iusto saepe cumque?</p>
 </body>
 </html>
