3 домашняя работая и семинар. Сделал небольшие доработки.

--- a/model_figma/index.html
+++ b/model_figma/index.html
@@ -10,9 +10,8 @@
 
 <body>
     <div class="top">
+        <a href="#"><img src="img/header__logo.svg" alt="header_logo"> GrowBe </a>
         <div class="header">
-
-            <a href="#"><img src="img/header__logo.svg" alt="header_logo"> GrowBe </a>
             <a href="#">Home</a>
             <a href="#">About Us</a>
             <a href="#">Services</a>
@@ -23,16 +22,18 @@
         </div>
 
         <div class="top__content">
-           
+            <img src="img/top_content_image.svg" alt="top_content_image">
             <div class="top__info">
                 <h1 class="title">SEO & Digital
                     Marketing For Your
                     Website.</h1>
                 <p class="text">Provide all kind of seo services and help to improve
-                    seo ranking. Globally incubate standards.</p>    
-                <div class="top__buttons"></div>
-                <button class="button">Start Now</button>
-                <button class="button">Watch Video</button>
+                    seo ranking. Globally incubate standards.</p>
+                <div class="top__buttons">
+                    <button class="button">Start Now</button>
+                    <button class="button">Watch Video</button>
+                </div>
+
             </div>
         </div>
         <div class="top__logos">
@@ -41,7 +42,7 @@
             <img src="img/logo3.svg" alt="logo3">
             <img src="img/logo4.svg" alt="logo4">
             <img src="img/logo5.svg" alt="logo5">
-            <img src="img/logo6.svg" alt="logo6">    
+            <img src="img/logo6.svg" alt="logo6">
         </div>
     </div>
 
