--- a/model_figma/index.html
+++ b/model_figma/index.html
@@ -6,23 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная страница</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet">
+    <link href="https://db.onlinewebfonts.com/c/000833a3a58fb083c44b9de42c2ff0a2?family=Gilroy-SemiBold" rel="stylesheet">
 </head>
 
 <body>
     <div class="top">
-        <a href="#"><img src="img/header__logo.svg" alt="header_logo"> GrowBe </a>
-        <div class="header">
-            <a href="#">Home</a>
-            <a href="#">About Us</a>
-            <a href="#">Services</a>
-            <a href="#">Features</a>
-            <a href="#">Team</a>
-            <a href="#">Blog</a>
-            <a href="#">Contact</a>
+        <div class="header center">
+            <div class="header__logo">
+                <a class="logo__image" href="#"><img src="img/header__logo.svg" alt="header_logo"></a>
+                <p class="site__name">Grow<span class="name__be">Be</span></p>
+            </div>
+            <div class="nav__menu">
+                <a class="nav__home" href="#">Home</a>
+                <a href="#">About Us</a>
+                <a href="#">Services</a>
+                <a href="#">Features</a>
+                <a href="#">Team</a>
+                <a href="#">Blog</a>
+                <a href="#">Contact</a>
+            </div>
         </div>
 
-        <div class="top__content">
-            <img src="img/top_content_image.svg" alt="top_content_image">
+        <div class="top__content center">
+
             <div class="top__info">
                 <h1 class="title">SEO & Digital
                     Marketing For Your
@@ -30,13 +37,13 @@
                 <p class="text">Provide all kind of seo services and help to improve
                     seo ranking. Globally incubate standards.</p>
                 <div class="top__buttons">
-                    <button class="button">Start Now</button>
-                    <button class="button">Watch Video</button>
+                    <button class="btn__start"><span class="text__start">Start Now</span></button>
+                    <p class="text__watch">Watch Video</p>
                 </div>
-
             </div>
+            <img class="top__image" src="img/top_content_image.svg" alt="top_content_image">
         </div>
-        <div class="top__logos">
+        <div class="top__logos center">
             <img src="img/logo1.svg" alt="logo1">
             <img src="img/logo2.svg" alt="logo2">
             <img src="img/logo3.svg" alt="logo3">
