--- a/model/index.html
+++ b/model/index.html
@@ -38,7 +38,61 @@
         </div>
     </div>
 
+    <body>
+        <div class="content">
+            <div class="item">
+                <img src="img/top_one_1.svg" alt="first_img">
+                <h3>Expert Prespective Agency Awards</h3>
+                <p>Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing
+                    layouts
+                    and visual mockups.</p>
+            </div>
+            <div class="item">
+                <img src="img/top_one_2.svg" alt="second_img">
+                <h3>Business Prespective Global Agency Awards</h3>
+                <p>Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing
+                    layouts
+                    and visual mockups.</p>
+            </div>
+            <div class="item">
+                <img src="img/top_one_3_4_5.svg" alt="third_img">
+                <h3>Value for Results in Global Agency Awards</h3>
+                <p>Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing
+                    layouts
+                    and visual mockups.</p>
+            </div>
+            <div class="item item_big">
+                <img width="306px" src="img/right_big.svg" alt="big_img">
+                <h3 class="big_title">In print, and publishing industries for previewing layouts and visual mockups.
+                </h3>
+                <p class="big_text">Lorem ipsum is placeholder text commonly used in print, and publishing industries
+                    for
+                    previewing layouts and visual mockups. Lorem ipsum is placeholder text commonly used in print, and
+                    publishing industries for previewing layouts and visual mockups. Lorem ipsum is placeholder text
+                    commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
+            </div>
+            <div class="item">
+                <img src="img/top_one_3_4_5.svg" alt="right_first_img">
+                <h3>Value for Results in Global Agency Awards</h3>
+                <p>Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing
+                    layouts
+                    and visual mockups.</p>
+            </div>
+            <div class="item">
+                <img src="img/top_one_3_4_5.svg" alt="right_second_img">
+                <h3>Value for Results in Global Agency Awards</h3>
+                <p>Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing
+                    layouts
+                    and visual mockups.</p>
+            </div>
+
+
+
+        </div>
+
+    </body>
 
 </body>
+
 
 </html>
