--- a/model_figma/index.html
+++ b/model_figma/index.html
@@ -7,7 +7,8 @@
     <title>Главная страница</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet">
-    <link href="https://db.onlinewebfonts.com/c/000833a3a58fb083c44b9de42c2ff0a2?family=Gilroy-SemiBold" rel="stylesheet">
+    <link href="https://db.onlinewebfonts.com/c/000833a3a58fb083c44b9de42c2ff0a2?family=Gilroy-SemiBold"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -50,6 +51,52 @@
             <img src="img/logo4.svg" alt="logo4">
             <img src="img/logo5.svg" alt="logo5">
             <img src="img/logo6.svg" alt="logo6">
+        </div>
+    </div>
+    <div class="content center">
+        <div class="top_block">
+            <div class="item__top">
+                <img src="img/top_1.svg" alt="top_1" class="top_img">
+                <h3 class="top_title">Grow Your Business</h3>
+                <p class="top_text" >Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+                <p class="text_link">Read More...</p>
+            </div>
+            <div class="item__top">
+                <img src="img/top_2.svg" alt="top_2" class="top_img">
+                <h3 class="top_title">Get Quality Ieads</h3>
+                <p class="top_text" >Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+                <p class="text_link">Read More...</p>
+            </div>
+            <div class="item__top">
+                <img src="img/top_3.svg" alt="top_3" class="top_img">
+                <h3 class="top_title">Drive More Sales</h3>
+                <p class="top_text">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+                <p class="text_link">Read More...</p>
+            </div>
+        </div>
+        <h1 class="center__header" >Why You Should Choose Us.</h1>
+        <p class="center__text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business
+            applications through revolutionary catalysts.</p>
+        <div class="bottom_block">
+            <div class="item_bottom">
+                <img src="img/bottom_1.png" alt="bottom_1" class="bottom_img">
+                <h class="bottom__title">Keyword Research</h>
+                <p class="bottom__text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                <button class="btn__start"><span class="learn_more">Learn More <img src="img/arrow.svg" alt="arrow" class="arrow"></span> </button>
+            </div>
+            <div class="item_bottom">
+                <img src="img/bottom_2.png" alt="bottom_2" class="bottom_img">
+                <h3 class="bottom__title">Seo Optimazadion</h3>
+                <p class="bottom__text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                <button class="btn__start"><span class="learn_more">Learn More <img src="img/arrow.svg" alt="arrow" class="arrow"></span> </button>
+            </div>
+            <div class="item_bottom">
+                <img src="img/bottom_3.png" alt="bottom_3" class="bottom_img">
+                <h3 class="bottom__title">Social Marketing</h3>
+                <p class="bottom__text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                <button class="btn__start"><span class="learn_more">Learn More <img src="img/arrow.svg" alt="arrow" class="arrow"></span> </button>
+               
+            </div>
         </div>
     </div>
 
