--- a/model/index.html
+++ b/model/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
 
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700;800&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Главная страница</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
-    <div class="top">
+    <div class="top center">
         <div class="header">
             <a class="header__link" href="#">Home</a>
             <a class="header__link" href="#">About</a>
@@ -24,8 +28,9 @@
                         industries
                         for previewing layouts and visual mockups.</p>
                     <div class="top__buttons">
-                        <button class="button">Get Started</button>
-                        <button class="button"><img src="img/button__img.svg" alt="button__img">Watch Video</button>
+                        <button class="button"><span class="button__text">Get Started</span></button>
+                        <button class="button"><img src="img/button__img.svg" alt="button__img"><span
+                                class="button__text">Watch Video</span></button>
                     </div>
                 </div>
             </div>
@@ -39,7 +44,7 @@
     </div>
 
     <body>
-        <div class="content">
+        <div class="content center">
             <div class="item">
                 <img src="img/top_one_1.svg" alt="first_img">
                 <h3>Expert Prespective Agency Awards</h3>
