--- a/model_11_lesson/index.html
+++ b/model_11_lesson/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <div class="header">
+<body >
+    <div class="header center">
         <div class="header_item_nav">
             <a class="header-logo" href="#"><img src="img/logo.png" alt="logo"></a>
             <a class="header-search-shortcut" href="#"><img src="img/search_shortcut.svg" alt="search_shortcut"></a>
@@ -22,8 +22,8 @@
             <img class="man_title" src="img/man_title.png" alt="man_title">
             <div class="banner">
                 <h1 class="banner-title">THE BRAND</h1>
-                <h3 class="banner-subtitle"> <span class="lux">OF LUXERIOUS</span> <span class="fashion">FASHION</span>
-                </h3>
+                <p class="banner-subtitle">OF LUXERIOUS<span class="fashion"> FASHION</span>
+                </p>
             </div>
         </div>
     </div>
