<-- 7 домашняя работа. Адаптив под 320-767.

--- a/model_11_lesson/index.html
+++ b/model_11_lesson/index.html
@@ -11,12 +11,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body >
+<body>
     <div class="header center">
         <div class="header_item_nav">
             <a class="header-logo" href="#"><img src="img/logo.png" alt="logo"></a>
             <a class="header-search-shortcut" href="#"><img src="img/search_shortcut.svg" alt="search_shortcut"></a>
             <a class="header-menu-buttons" href="#"><img src="img/menu_buttons.svg" alt="menu_buttons"></a>
+            <a class="header-menu-buttons-mobile" href="#"><img src="img/menu-mobile.svg" alt="header-menu-buttons-mobile"></a>
         </div>
         <div class="header_item_title">
             <img class="man_title" src="img/man_title.png" alt="man_title">
@@ -56,7 +57,6 @@
     <div class="content-central">
         <h3 class="content_title">Fetured Items</h3>
         <p class="content_text">Shop for items based on what we featured in this week</p>
-
     </div>
     <div class="content">
         <div class="content-item">
@@ -70,9 +70,12 @@
             </div>
         </div>
         <div class="content-item">
-            <div class="bg-font-content">
-                <img class="img-content" src="img/item_2.png" alt="item_2">
+            <div class="bg-font-content-pink">
+                <img class="img-content-pink" src="img/item_2.png" alt="item_2">
+                <div class="bg-font-dark"></div>
+                <button class="buy_item"><img src="img/button_image.svg" alt=""> Add to Cart</button>
             </div>
+            
             <div class="card-item">
                 <p class="name">ELLERY X M'O CAPSULE</p>
                 <p class="description">Known for her sculptural takes on traditional tailoring, Australian arbiter
