<-- 9 домашняя работа. Доработал некоторые недочеты, разместил сайт на бесплатном хостинге

--- a/model_figma/index.html
+++ b/model_figma/index.html
@@ -80,7 +80,7 @@
         <div class="bottom_block">
             <div class="item_bottom">
                 <img src="img/bottom_1.png" alt="bottom_1" class="bottom_img">
-                <h class="bottom__title">Keyword Research</h>
+                <h1> class="bottom__title">Keyword Research</h1>
                 <p class="bottom__text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
                 <button class="btn__start"><span class="learn_more">Learn More <img src="img/arrow.svg" alt="arrow" class="arrow"></span> </button>
             </div>
